Se creó una carpeta files para añadir el TP

--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
         <div class="animacion"></div>
         <div class="mover"></div>
      </section>
-     
+
     </main>
-    
+    <footer>
+        <a href="files/TP-CSS.docx" download style="text-decoration: none;">
+            <button style=" background-color: #211ece; color: white; border: none; border-radius: 15px; padding: 10px 15px; font-size: 16px; cursor: pointer; margin: 10px;">
+                DESCARGAR PDF
+            </button>
+        </a>
+    </footer>
 </body>
 </html>
